--- a/package.json
+++ b/package.json
@@ -1,59 +1,64 @@
 {
-  "name": "campus-connect",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write .",
-    "migrate": "prisma migrate dev",
-    "studio": "prisma studio",
-    "generate": "prisma generate"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.722.0",
-    "@aws-sdk/s3-request-presigner": "^3.723.0",
-    "@prisma/client": "^6.1.0",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/nodemailer": "^6.4.17",
-    "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^11.15.0",
-    "jose": "^5.9.6",
-    "lucide-react": "^0.469.0",
-    "next": "15.1.3",
-    "nodemailer": "^6.9.16",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-intersection-observer": "^9.14.1",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "postcss": "^8",
-    "prettier": "^3.4.2",
-    "prisma": "^6.1.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "campus-connect",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "migrate": "prisma migrate dev",
+        "studio": "prisma studio",
+        "generate": "prisma generate",
+        "check-types": "tsc --noEmit"
+    },
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.722.0",
+        "@aws-sdk/s3-request-presigner": "^3.723.0",
+        "@hookform/resolvers": "^3.10.0",
+        "@prisma/client": "^6.1.0",
+        "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-dialog": "^1.1.4",
+        "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-popover": "^1.1.4",
+        "@radix-ui/react-select": "^2.1.4",
+        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-switch": "^1.1.2",
+        "@radix-ui/react-toast": "^1.2.4",
+        "@radix-ui/react-tooltip": "^1.1.6",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/nodemailer": "^6.4.17",
+        "axios": "^1.7.9",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "cmdk": "^1.0.4",
+        "date-fns": "^4.1.0",
+        "framer-motion": "^11.15.0",
+        "jose": "^5.9.6",
+        "lucide-react": "^0.469.0",
+        "next": "15.1.3",
+        "nodemailer": "^6.9.16",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-hook-form": "^7.54.2",
+        "react-intersection-observer": "^9.14.1",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7",
+        "ws": "^8.18.0",
+        "zod": "^3.24.1"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "@types/ws": "^8.5.13",
+        "eslint": "^9",
+        "eslint-config-next": "15.1.3",
+        "postcss": "^8",
+        "prettier": "^3.4.2",
+        "prisma": "^6.1.0",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
