--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "migrate": "prisma migrate dev",
         "studio": "prisma studio",
         "generate": "prisma generate",
-        "check-types": "tsc --noEmit"
+        "check-types": "tsc --noEmit",
+        "format": "prettier --write \"**/*.{ts,tsx,md}\""
     },
     "dependencies": {
         "@aws-sdk/client-s3": "^3.722.0",
